--- a/Entidades/Entidades.csproj
+++ b/Entidades/Entidades.csproj
@@ -42,7 +42,10 @@
   <ItemGroup>
     <Compile Include="ClienteEmpresa.cs" />
     <Compile Include="ClienteIndividuo.cs" />
+    <Compile Include="DocumentoComercial.cs" />
+    <Compile Include="Empresa.cs" />
     <Compile Include="Factura.cs" />
+    <Compile Include="Persona.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proveedor.cs" />
