--- a/DALIntegrador/DALIntegrador.csproj
+++ b/DALIntegrador/DALIntegrador.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DBB51899-B486-4262-8FE8-79B5F5308D45}</ProjectGuid>
+    <ProjectGuid>{921A60CB-7AAD-47E4-B4F4-9999FFE8D651}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Entidades</RootNamespace>
-    <AssemblyName>Entidades</AssemblyName>
+    <RootNamespace>DALIntegrador</RootNamespace>
+    <AssemblyName>DALIntegrador</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,23 +40,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Categoria.cs" />
-    <Compile Include="ClienteEmpresa.cs" />
-    <Compile Include="ClienteIndividuo.cs" />
-    <Compile Include="DatosContacto.cs" />
-    <Compile Include="DocumentoComercial.cs" />
-    <Compile Include="Empresa.cs" />
-    <Compile Include="Factura.cs" />
-    <Compile Include="Item.cs" />
-    <Compile Include="Persona.cs" />
-    <Compile Include="Producto.cs" />
+    <Compile Include="DAC\DaProductos.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+    <Compile Include="ServiceDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Proveedor.cs" />
-    <Compile Include="Remito.cs" />
-    <Compile Include="Vendedor.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="ClassDiagram1.cd" />
+    <None Include="app.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Entidades\Entidades.csproj">
+      <Project>{DBB51899-B486-4262-8FE8-79B5F5308D45}</Project>
+      <Name>Entidades</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
